--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 #todos {
   border: 2px solid purple;
   height: 400px;
+  list-style: none;
   margin: 1em 0;
   overflow-y: auto;
   padding-inline-start: 40px;
@@ -15,4 +16,22 @@
 
 #todos > li.completed {
   color: blue;
+}
+
+#state-panel {
+  position: relative;
+}
+
+#state-panel > pre {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.5);
+  height: 100vh;
+  margin: 0;
+  overflow-y: auto;
+  padding: 0.8em;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 40%;
 }
